fixed misaligned burgir, updated title

--- a/src/index.css
+++ b/src/index.css
@@ -711,3 +711,7 @@ input[type=range] {
     transition: .2s ease-in-out;
   }
 }
+
+.fa-bars::before {
+  top: 0px;
+}
